--- a/web/package.json
+++ b/web/package.json
@@ -9,25 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
-    "leaflet": "^1.9.4",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
-    "react-leaflet": "^4.2.1",
-    "react-modal": "^3.16.3",
-    "react-model": "^4.3.1",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3"
