--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@reduxjs/toolkit": "^2.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
@@ -24,6 +25,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
