--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-radio-group": "^1.3.3",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.4",
     "@reduxjs/toolkit": "^2.7.0",
     "class-variance-authority": "^0.7.0",
