--- a/web/package.json
+++ b/web/package.json
@@ -25,12 +25,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^2.5.2",
